--- a/css/student2.css
+++ b/css/student2.css
@@ -40,3 +40,49 @@ body{
     margin-bottom: 10px;
     text-align: center;
  }
+
+ nav li{
+    background-color: aqua;
+    border: 2px solid black;
+    border-radius: 25px;
+    display: inline-block;
+    padding: 10px;
+    width:18%;
+    margin-right: 15px;
+ }
+
+ main img{
+    width:24%;
+    box-sizing: border-box;
+    padding:15px;
+    border:6px dashed green;
+    margin:0;
+ }
+
+ p{
+    line-height:2;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color:darkslategray;
+    background-color: bisque;
+    margin-bottom: 10px;
+    text-align: center;
+ }
+ .gallery{
+    display: grid;
+    width: 90%;
+    justify-content: center;
+    grid-template-columns: 250px 250px 250px;
+    /* grid-template-rows: 1fr 1fr 1fr; */
+    border: 2px dashed black;
+ }
+.gallery img{
+    width: 250px;
+    height: 250px;
+    border:6px dashed green;
+}
+.gallery img:last-child{
+    grid-row: 3 / span 1;
+    grid-column: 1 / span 3;
+
+
+}
