--- a/css/student1.css
+++ b/css/student1.css
@@ -40,3 +40,28 @@ body{
     margin-bottom: 10px;
     text-align: center;
  }
+
+ .gallery {
+   display: grid;
+   grid-template-columns: 250px 250px;
+   border: 2px solid black;
+   width: 90%;
+   margin: auto;
+   justify-content:center;
+   align-items:center;
+   justify-items: center;
+ }
+
+ .gallery img{
+   width: 250px;
+   height: 250px;
+   border: 3px dotted aqua;
+ }
+
+ .gallery img:last-child{
+   display: inline-block;
+   grid-row-start: 4;
+   grid-row-end: span 1;
+   grid-column-start:1;
+   grid-column-end: 3;
+ }
